@@ -1,0 +1,126 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<html> 
+
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+  <title>DOCUMENTATION-TEMPLATE - a cool library</title>
+  <style type="text/css">
+  pre { padding:5px; background-color:#e0e0e0 }
+  h3, h4 { text-decoration: underline; }
+  a { text-decoration: none; padding: 1px 2px 1px 2px; }
+  a:visited { text-decoration: none; padding: 1px 2px 1px 2px; }
+  a:hover { text-decoration: none; padding: 1px 1px 1px 1px; border: 1px solid #000000; } 
+  a:focus { text-decoration: none; padding: 1px 2px 1px 2px; border: none; }
+  a.none { text-decoration: none; padding: 0; }
+  a.none:visited { text-decoration: none; padding: 0; } 
+  a.none:hover { text-decoration: none; border: none; padding: 0; } 
+  a.none:focus { text-decoration: none; border: none; padding: 0; } 
+  a.noborder { text-decoration: none; padding: 0; } 
+  a.noborder:visited { text-decoration: none; padding: 0; } 
+  a.noborder:hover { text-decoration: none; border: none; padding: 0; } 
+  a.noborder:focus { text-decoration: none; border: none; padding: 0; }  
+  pre.none { padding:5px; background-color:#ffffff }
+  </style>
+</head>
+
+<body bgcolor=white>
+
+<h2> LAUNCHPAD A Common LISP libarary for lauchpad.net</h2>
+
+<blockquote>
+<br>&nbsp;<br><h3><a name=abstract class=none>Abstract</a></h3>
+
+The code comes with
+a <a
+href="http://www.opensource.org/licenses/bsd-license.php">BSD-style
+license</a> so you can basically do with it whatever you want.
+
+<p>
+<font color=red>Download shortcut:</font> <a href="http://common-lisp.net/project/cl-launchpad/cl-launchpad_latest.tar.gz">http://common-lisp.net/project/cl-launchpad/cl-launchpad_latest.tar.gz</a>.
+</blockquote>
+
+<br>&nbsp;<br><h3><a class=none name="contents">Contents</a></h3>
+<ol>
+  <li><a href="#download">Download</a>
+  <li><a href="#dictionary">The  dictionary</a>
+    <ol>
+    
+    <li><a href="#get-all-bugs"><code>get-all-bugs</code></a>
+    
+    <li><a href="#get-token-and-login"><code>get-token-and-login</code></a>
+    
+    <li><a href="#open-a-bug"><code>open-a-bug</code></a>
+    
+    <li><a href="#update-a-bug"><code>update-a-bug</code></a>
+    
+    </ol>
+  <li><a href="#ack">Acknowledgements</a>
+</ol>
+
+<br>&nbsp;<br><h3><a class=none name="download">Download</a></h3>
+
+LAUNCHPAD together with this documentation can be downloaded from <a
+href="http://common-lisp.net/project/cl-launchpad/cl-launchpad_latest.tar.gz">http://common-lisp.net/project/cl-launchpad/cl-launchpad_latest.tar.gz</a>. The
+current version is 0.1.
+
+<br>&nbsp;<br><h3><a class=none name="dictionary">The LAUNCHPAD dictionary</a></h3>
+
+
+
+<!-- Entry for GET-ALL-BUGS -->
+
+<p><br>[Function]<br><a class=none name='get-all-bugs'><b>get-all-bugs</b> <i>project</i> =&gt; <i>result</i></a>
+<blockquote><br>
+
+
+
+</blockquote>
+
+<!-- End of entry for GET-ALL-BUGS -->
+
+
+<!-- Entry for GET-TOKEN-AND-LOGIN -->
+
+<p><br>[Function]<br><a class=none name='get-token-and-login'><b>get-token-and-login</b> <i>user-name</i> =&gt; <i>result</i></a>
+<blockquote><br>
+
+
+
+</blockquote>
+
+<!-- End of entry for GET-TOKEN-AND-LOGIN -->
+
+
+<!-- Entry for OPEN-A-BUG -->
+
+<p><br>[Function]<br><a class=none name='open-a-bug'><b>open-a-bug</b> <i>project title description</i> =&gt; <i>result</i></a>
+<blockquote><br>
+
+
+
+</blockquote>
+
+<!-- End of entry for OPEN-A-BUG -->
+
+
+<!-- Entry for UPDATE-A-BUG -->
+
+<p><br>[Function]<br><a class=none name='update-a-bug'><b>update-a-bug</b> <i>bug-id <tt>&amp;key</tt> title description</i> =&gt; <i>result</i></a>
+<blockquote><br>
+
+
+
+</blockquote>
+
+<!-- End of entry for UPDATE-A-BUG -->
+
+
+<br>&nbsp;<br><h3><a class=none name="ack">Acknowledgements</a></h3>
+
+<p>
+This documentation was prepared with <a href="http://weitz.de/documentation-template/">DOCUMENTATION-TEMPLATE</a>.
+</p>
+<p>
+<!-- hhmts start --> Last modified: Mon Dec  7 11:24:34 CST 2009 <!-- hhmts end -->
+</body>
+</html>
